[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "guardian-av"
version = "0.1.0"
description = "Windows defensive sandbox AV for untrusted file ingestion"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pywin32>=306",
  "PyYAML>=6.0",
  "cryptography>=42.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
